oathkeeper/08_envoy_header/envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_service }
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                path_prefix: /decisions
                server_uri:
                  uri: oathkeeper:4456
                  cluster: ext_auth
                  timeout: 0.25s
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: "cookie"
                    - exact: "user_agent"
                authorization_response:
                  allowed_client_headers:
                    patterns:
                    - exact: "cookie"
                  allowed_upstream_headers:
                    patterns:
                    - exact: "x-user"

              failure_mode_allow: false
          - name: envoy.filters.http.router

  clusters:
  - name: some_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hello
                port_value: 8090
  - name: ext_auth
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ext_auth
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: oathkeeper
                  port_value: 4456
